# Scan2knit

./: .gitignore  CMakeLists.txt  CurveSkeleton.cpp  CurveSkeleton.h  Display.cpp  Display.h  Linking.h  MeshFile.cpp  MeshFile.h  README.md  Segmentation.cpp  Segmentation.h  Settings.cpp  Settings.h  Skeletonization.cpp  Skeletonization.h  Slicing.cpp  Slicing.h  Stitch.cpp  Stitch.h  cgalHeader.h  cgalHeader.hpp  iglHeader.h  main.cpp  project.cpp  project.h
data/: Y.off  Y1.off  bunny.off  cat.off  duck1.off  foot.off  fox.off  h2k.off  hand-mix.mlp  hand.off  hand3.off  hand6.off  misc-cactus.off  pikachu.off  teddy-mix.mlp  teddy.off  test.off
settings/: Settings.csv
